--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <script src="patterns/shockwave.js"></script>
     <script src="patterns/rain.js"></script>
     <script src="patterns/plasma.js"></script>
+    <script src="patterns/ripple.js"></script>
     <script src="ascii-effect.js"></script>
     <script src="main.js"></script>
 </body>
