--- a/index.html
+++ b/index.html
@@ -54,14 +54,32 @@
 
             <div class="slider-container">
                 <label for="char-size">Size</label>
-                <input type="range" class="char-size-control" min="8" max="50" value="20">
+                <input type="range" id="char-size" min="12" max="50" value="20">
                 <span class="char-size-value">20</span>
             </div>
 
             <div class="slider-container">
                 <label for="cellular-density">Density</label>
-                <input type="range" id="cellular-density" min="0.1" max="0.9" step="0.1" value="0.5">
+                <input type="range" id="cellular-density" min="0.001" max="0.9" step="0.001" value="0.5">
                 <span class="cellular-density-value">0.5</span>
+            </div>
+
+            <div class="slider-container">
+                <label for="cellular-iterations">Iterations</label>
+                <input type="range" id="cellular-iterations" min="1" max="10" value="5">
+                <span class="cellular-iterations-value">5</span>
+            </div>
+
+            <div class="slider-container">
+                <label for="cellular-threshold">Threshold</label>
+                <input type="range" id="cellular-threshold" min="0.1" max="0.9" step="0.1" value="0.5">
+                <span class="cellular-threshold-value">0.5</span>
+            </div>
+
+            <div class="slider-container">
+                <label for="cellular-smoothing">Smoothing</label>
+                <input type="range" id="cellular-smoothing" min="0" max="1" step="0.1" value="0.5">
+                <span class="cellular-smoothing-value">0.5</span>
             </div>
 
             <button id="random-color" class="control-btn" 
@@ -114,9 +132,10 @@
     <script src="patterns/psychedelic.js"></script>
     <script src="patterns/cellular.js"></script>
     <script src="patterns/shockwave.js"></script>
-    <script src="patterns/rain.js"></script>
     <script src="patterns/plasma.js"></script>
     <script src="patterns/ripple.js"></script>
+    <script src="patterns/matrix.js"></script>
+    <script src="patterns/camera.js"></script>
     <script src="ascii-effect.js"></script>
     <script src="main.js"></script>
 </body>
