--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
                 </div>
             </div>
 
-            <div class="slider-container">
+            <div class="slider-container" id="speed-container">
                 <label for="speed">Speed</label>
                 <input type="range" id="speed" min="1" max="100" value="50">
                 <span class="speed-value">50</span>
             </div>
 
-            <div class="slider-container">
+            <div class="slider-container" id="char-size-container">
                 <label for="char-size">Size</label>
                 <input type="range" id="char-size" min="12" max="50" value="20">
                 <span class="char-size-value">20</span>
             </div>
 
-            <div class="slider-container">
+            <div class="slider-container" id="cellular-density-container">
                 <label for="cellular-density">Density</label>
                 <input type="range" id="cellular-density" min="0.001" max="0.9" step="0.001" value="0.5">
                 <span class="cellular-density-value">0.5</span>
             </div>
 
-            <div class="slider-container">
+            <div class="slider-container" id="cellular-iterations-container">
                 <label for="cellular-iterations">Iterations</label>
                 <input type="range" id="cellular-iterations" min="1" max="10" value="5">
                 <span class="cellular-iterations-value">5</span>
             </div>
 
-            <div class="slider-container">
+            <div class="slider-container" id="cellular-threshold-container">
                 <label for="cellular-threshold">Threshold</label>
                 <input type="range" id="cellular-threshold" min="0.1" max="0.9" step="0.1" value="0.5">
                 <span class="cellular-threshold-value">0.5</span>
             </div>
 
-            <div class="slider-container">
+            <div class="slider-container" id="cellular-smoothing-container">
                 <label for="cellular-smoothing">Smoothing</label>
                 <input type="range" id="cellular-smoothing" min="0" max="1" step="0.1" value="0.5">
                 <span class="cellular-smoothing-value">0.5</span>
