--- a/index.html
+++ b/index.html
@@ -1,145 +1,207 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASCII Art Experience</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>ASCII Raymarcher • Optimized</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
+<style>
+  /* Modular panel toggle: hide panel when not .open */
+  #panel { display: block; transition: max-height 0.2s; }
+  #panel:not(.open) { display: none; }
+</style>
+</head>
+
 <body>
-    <div id="ascii-container"></div>
-    
-    <div class="stats">
-        <div class="fps">FPS: 60</div>
-        <div class="resolution">0 x 0</div>
-        <div class="mode-name">Current Mode: Wave</div>
-    </div>
+<!-- Modular templates -->
+<template id="tpl-topbar">
+  <div id="topbar">
+    <span id="title">ASCII Raymarcher</span>
+    <span class="pill tiny">Optimized • TAA • Adaptive • SDF</span>
+    <span class="spacer"></span>
+    <button id="panelBtn" title="Toggle Controls (mobile)">Controls<span id="mobileTip"> ☰</span></button>
+    <button id="fullscreenBtn" title="Fullscreen">Fullscreen</button>
+    <span id="fps">FPS: --</span>
+  </div>
+</template>
 
-    <div class="hide-menu-button">
-        <button id="toggle-menu" class="glow-button hide-menu-button" 
-                aria-label="Toggle menu visibility"
-                title="Toggle Menu Visibility (M)">
-            &#128065; <!-- Open eye emoji -->
-        </button>
-    </div>
+<template id="tpl-viewer">
+  <div id="viewer">
+    <canvas id="canvas"></canvas>
+    <div id="hud" class="tiny">Drag to orbit • Wheel to zoom • Keys: WASD, QE, R reset</div>
+  </div>
+</template>
 
-    <div class="controls">
-        <div class="control-panel">
-            <div class="dropdown-container">
-                <div class="dropdown-controls">
-                    <button id="prev-mode" class="arrow-btn" aria-label="Previous mode">◄</button>
-                    <div class="glow-dropdown-wrapper">
-                        <select id="mode-selector" class="glow-dropdown" aria-label="Select mode">
-                            <!-- Options will be populated by JavaScript -->
-                        </select>
-                    </div>
-                    <button id="next-mode" class="arrow-btn" aria-label="Next mode">►</button>
-                </div>
-                <div class="dropdown-controls">
-                    <button id="prev-char" class="arrow-btn" aria-label="Previous character set">◄</button>
-                    <div class="glow-dropdown-wrapper">
-                        <select id="char-selector" class="glow-dropdown" aria-label="Select character set">
-                            <!-- Options will be populated by JavaScript -->
-                        </select>
-                    </div>
-                    <button id="next-char" class="arrow-btn" aria-label="Next character set">►</button>
-                </div>
-            </div>
-
-            <div class="slider-container" id="speed-container">
-                <label for="speed">Speed</label>
-                <input type="range" id="speed" min="1" max="100" value="67">
-                <span class="speed-value">10.0</span>
-            </div>
-
-            <div class="slider-container" id="char-size-container">
-                <label for="char-size">Size</label>
-                <input type="range" id="char-size" min="12" max="50" value="30">
-                <span class="char-size-value">30</span>
-            </div>
-
-            <div class="slider-container" id="cellular-density-container">
-                <label for="cellular-density">Density</label>
-                <input type="range" id="cellular-density" min="0.001" max="0.9" step="0.001" value="0.5">
-                <span class="cellular-density-value">0.5</span>
-            </div>
-
-            <div class="slider-container" id="cellular-iterations-container">
-                <label for="cellular-iterations">Iterations</label>
-                <input type="range" id="cellular-iterations" min="1" max="10" value="5">
-                <span class="cellular-iterations-value">5</span>
-            </div>
-
-            <div class="slider-container" id="cellular-threshold-container">
-                <label for="cellular-threshold">Threshold</label>
-                <input type="range" id="cellular-threshold" min="0.1" max="0.9" step="0.1" value="0.5">
-                <span class="cellular-threshold-value">0.5</span>
-            </div>
-
-            <div class="slider-container" id="cellular-smoothing-container">
-                <label for="cellular-smoothing">Smoothing</label>
-                <input type="range" id="cellular-smoothing" min="0" max="1" step="0.1" value="0.5">
-                <span class="cellular-smoothing-value">0.5</span>
-            </div>
-
-            <button id="random-color" class="control-btn" 
-                    aria-label="Randomize colors"
-                    title="Random Color Mode (R)">
-                🎨 Random Colors
-            </button>
+<template id="tpl-panel">
+  <div id="panel">
+    <!-- ...existing code... (all the <details> sections for panel) ... -->
+    <details open>
+      <summary>Scene</summary>
+      <div class="group">
+        <label>Shape
+          <select id="shape">
+              <option>Sphere</option>
+              <option>Box</option>
+              <option selected>Torus</option>
+              <option>Octahedron</option>
+              <option>Capsule</option>
+              <option>Cylinder</option>
+              <option>Cone</option>
+              <option>Pyramid</option>
+              <option>Ellipsoid</option>
+              <option>RoundedBox</option>
+              <option>TriPrism</option>
+              <option>HexPrism</option>
+              <option>Plane</option>
+              <option>Cross</option>
+              <option>Tetrahedron</option>
+              <option>Star</option>
+              <option>Heart</option>
+              <option>Egg</option>
+          </select>
+        </label>
+        <label>Size <input id="size" type="range" min="0.2" max="2.5" step="0.01" value="1.1"></label>
+        <div class="row">
+          <span class="tiny" style="width:68px">Rotation</span>
+          <input id="rotX" type="range" min="-180" max="180" step="1" value="20" class="grow">
         </div>
-
-        <div class="theme-controls">
-            <div class="color-picker">
-                <input type="color" id="primary-color" value="#00ff00">
-                <label>Primary</label>
-            </div>
-            <div class="color-picker">
-                <input type="color" id="background-color" value="#000000">
-                <label>Background</label>
-            </div>
-            <button id="cycle-theme" class="glow-button">Theme</button>
+        <div class="row">
+          <span class="tiny" style="width:68px"></span>
+          <input id="rotY" type="range" min="-180" max="180" step="1" value="35" class="grow">
         </div>
-    </div>
-
-    <div class="mode-info">
-        <div class="shortcuts">
-            <div class="shortcut">
-                <kbd>M</kbd>
-                <span>Change Mode</span>
-            </div>
-            <div class="shortcut">
-                <kbd>C</kbd>
-                <span>Change Char</span>
-            </div>
-            <div class="shortcut">
-                <kbd>T</kbd>
-                <span>Change Theme</span>
-            </div>
+        <div class="row">
+          <span class="tiny" style="width:68px"></span>
+          <input id="rotZ" type="range" min="-180" max="180" step="1" value="0" class="grow">
         </div>
-    </div>
+        <div class="row">
+          <label class="inline"><input id="autoSpin" type="checkbox" checked> Auto spin</label>
+          <label>Speed <input id="spinSpeed" type="range" min="-3" max="3" step="0.01" value="0.6"></label>
+        </div>
+      </div>
+    </details>
+    <details open>
+      <summary>Lighting</summary>
+      <div class="group">
+        <label>Ambient <input id="ambient" type="range" min="0" max="1" step="0.01" value="0.25"></label>
+        <label>Diffuse <input id="diffuse" type="range" min="0" max="2" step="0.01" value="1.05"></label>
+        <label>Specular <input id="specular" type="range" min="0" max="2" step="0.01" value="0.5"></label>
+        <label>Shininess <input id="shininess" type="range" min="2" max="128" step="1" value="32"></label>
+        <div class="row">
+          <label class="inline"><input id="shadows" type="checkbox" checked> Shadows</label>
+          <label>Softness <input id="shadowK" type="range" min="1" max="24" step="0.1" value="12"></label>
+        </div>
+        <div class="row">
+          <label class="inline"><input id="ao" type="checkbox" checked> AO</label>
+          <label>AO Strength <input id="aoStrength" type="range" min="0" max="2" step="0.01" value="0.9"></label>
+        </div>
+      </div>
+    </details>
+    <details open>
+      <summary>Surface Noise / Animation</summary>
+      <div class="group">
+        <label class="inline"><input id="noiseEnabled" type="checkbox"> Enable noise</label>
+        <label>Amount <input id="noiseAmt" type="range" min="0" max="0.8" step="0.001" value="0.16"></label>
+        <label>Scale <input id="noiseScale" type="range" min="0.2" max="6" step="0.01" value="2.0"></label>
+        <label>Speed <input id="noiseSpeed" type="range" min="0" max="4" step="0.01" value="0.9"></label>
+        <label>Octaves <input id="noiseOct" type="range" min="1" max="6" step="1" value="3"></label>
+      </div>
+    </details>
+    <details open>
+      <summary>ASCII & Color</summary>
+      <div class="group">
+        <label>ASCII preset
+          <select id="asciiPreset">
+            <option value="dense">Dense</option>
+            <option value="classic">Classic</option>
+            <option value="blocks">Blocks</option>
+            <option value="dots">Dots</option>
+            <option value="binary">Binary</option>
+          </select>
+        </label>
+        <label>Characters
+          <input id="asciiChars" type="text" value=" .,'`^:;Il!i~+_-?][}{1)(|\/tfjrxnuvczXYUJCLQ0OZmwqpdbkhao*#MW&8%B@$">
+        </label>
+        <div class="row">
+          <label class="inline"><input id="invert" type="checkbox"> Invert</label>
+        </div>
+        <div class="row">
+          <label class="inline"><input id="colorEnabled" type="checkbox" checked> Color</label>
+          <label>Gamma <input id="gamma" type="range" min="0.6" max="2.4" step="0.01" value="1.0"></label>
+        </div>
+        <label>Color mode
+          <select id="colorMode">
+            <option value="luma">Luma</option>
+            <option value="depth">Depth</option>
+            <option value="normal">Normal</option>
+            <option value="specular">Specular</option>
+            <option value="momentum">Momentum</option>
+          </select>
+        </label>
+        <label>Palette
+          <select id="palette">
+            <option value="grayscale">Grayscale</option>
+            <option value="fire">Fire</option>
+            <option value="ice">Ice</option>
+            <option value="viridis" selected>Viridis</option>
+            <option value="rainbow">Rainbow</option>
+          </select>
+        </label>
+      </div>
+    </details>
+    <details open>
+      <summary>Render & Performance</summary>
+      <div class="group">
+        <label>Font size <input id="fontSize" type="range" min="8" max="28" step="1" value="14"></label>
+        <label>Resolution <input id="resScale" type="range" min="0.5" max="2" step="0.01" value="1.0"></label>
+        <label>Max steps <input id="maxSteps" type="range" min="16" max="180" step="1" value="72"></label>
+        <label>Max distance <input id="maxDist" type="range" min="8" max="64" step="0.5" value="24"></label>
+        <div class="row">
+          <label class="inline"><input id="taa" type="checkbox" checked> Temporal AA</label>
+          <label>Blend <input id="taaAmt" type="range" min="0" max="0.95" step="0.01" value="0.6"></label>
+        </div>
+        <div class="row">
+          <label class="inline"><input id="adaptive" type="checkbox" checked> Adaptive res</label>
+          <label>Target FPS <input id="targetFps" type="range" min="24" max="90" step="1" value="50"></label>
+        </div>
+        <div class="row">
+          <button id="resetCam">Reset view</button>
+          <button id="resetAll" title="Reset all controls">Reset all</button>
+        </div>
+        <div class="hint tiny">Pro tip: Adaptive res keeps FPS stable; increase Max steps for crisper shadows/edges.</div>
+      </div>
+    </details>
+  </div>
+</template>
 
-    <script src="constants.js"></script>
-    <script src="utilities.js"></script>
-    <script src="event-handlers.js"></script>
-    <script src="patterns/wave.js"></script>
-    <script src="patterns/spiral.js"></script>
-    <script src="patterns/vortex.js"></script>
-    <script src="patterns/mandala.js"></script>
-    <script src="patterns/tunnel.js"></script>
-    <script src="patterns/fractal.js"></script>
-    <script src="patterns/interference.js"></script>
-    <script src="patterns/psychedelic.js"></script>
-    <script src="patterns/cellular.js"></script>
-    <script src="patterns/shockwave.js"></script>
-    <script src="patterns/plasma.js"></script>
-    <script src="patterns/ripple.js"></script>
-    <script src="patterns/matrix.js"></script>
-    <script src="ascii-effect.js"></script>
-    <script src="main.js"></script>
+<div id="app"></div>
+
+<script>
+// Modular injection of templates
+const app = document.getElementById('app');
+const topbar = document.getElementById('tpl-topbar').content.cloneNode(true);
+const main = document.createElement('div');
+main.id = 'main';
+const viewer = document.getElementById('tpl-viewer').content.cloneNode(true);
+const panel = document.getElementById('tpl-panel').content.cloneNode(true);
+main.appendChild(viewer);
+main.appendChild(panel);
+app.appendChild(topbar);
+app.appendChild(main);
+</script>
+<script src="js/math_utils.js"></script>
+<script src="js/noise_value_noise_fbm.js"></script>
+<script src="js/sdfs.js"></script>
+<script src="js/scene_map_optimized.js"></script>
+<script src="js/utils.js"></script>
+<script src="js/ascii_dither.js"></script>
+<script src="js/app_state.js"></script>
+<script src="js/ui_wiring.js"></script>
+<script src="js/resize_metrics_grid_cache.js"></script>
+<script src="js/input.js"></script>
+<!-- merged into utils.js -->
+<script src="js/ray_helpers_culling.js"></script>
+<script src="js/render_loop_taa_adaptive_res.js"></script>
+<script src="js/boot.js"></script>
 </body>
 </html>
